# choretracker

./: .eslintrc.json  README.md  middleware.ts  package.json  pyproject.toml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/auth/demo/: route.ts
app/api/auth/providers/: route.ts
app/api/auth/session/: route.ts
app/calendar/: page.tsx
app/chores/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
choretracker/: __init__.py  conflicts.py  ingestion.py  models.py  registry.py  storage.py
choretracker/connectors/: base.py  google.py  microsoft.py
components/: ProtectedShell.tsx  TabNavigation.tsx
docs/: project-plan.md
lib/auth/: providers.ts  session.ts
lib/data/: households.ts
tests/: test_conflicts.py  test_ingestion_and_registry.py  test_token_refresh.py
