[project]
name = "choretracker"
version = "0.1.0"
description = "Household calendar orchestration with provider connectors"
authors = [{name="Chore Tracker"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
